feat: Update Gemini API and refine AI introduction
Updates the `@google/genai` dependency to `^0.24.1` and refines the initial greeting message from NEXA. The new introduction is more personalized and directly asks how NEXA can assist the user, incorporating role-specific addressing and a design credit.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client"
+    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
+    "@google/generative-ai": "https://aistudiocdn.com/@google/generative-ai@^0.24.1"
   }
 }
 </script>
