--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               'slide-up': 'slideUp 0.6s ease-out forwards',
               'scan': 'scanLine 3s linear infinite',
               'grid-move': 'gridMove 20s linear infinite',
+              'breathing': 'breathing 4s ease-in-out infinite',
             },
             keyframes: {
               'spin-reverse': {
@@ -64,6 +65,10 @@
               gridMove: {
                 '0%': { backgroundPosition: '0 0' },
                 '100%': { backgroundPosition: '0 100px' }
+              },
+              breathing: {
+                '0%, 100%': { transform: 'scale(1)', opacity: '0.7' },
+                '50%': { transform: 'scale(1.03)', opacity: '1' },
               }
             }
           }
