--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
         -webkit-text-security: disc;
         text-security: disc;
       }
+      
+      /* High-security invisible password field */
+      .password-hidden, .password-hidden:focus {
+        -webkit-text-security: none !important;
+        text-security: none !important;
+        color: transparent !important;
+        text-shadow: none !important;
+        caret-color: #ef4444; /* Admin theme red */
+      }
     </style>
   <script type="importmap">
 {
@@ -145,7 +154,8 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
     "@google/generative-ai": "https://aistudiocdn.com/@google/generative-ai@^0.24.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4"
   }
 }
 </script>
