--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
       }
     </script>
     <style>
+      html, body, #root {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
       body {
         background-color: #000;
         color: #fff;
