--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -102,8 +103,8 @@
         height: 100%;
         left: -50%;
         background-image: 
-          linear-gradient(rgba(41, 223, 255, 0.1) 1px, transparent 1px),
-          linear-gradient(90deg, rgba(41, 223, 255, 0.1) 1px, transparent 1px);
+          linear-gradient(var(--grid-color, rgba(41, 223, 255, 0.1)) 1px, transparent 1px),
+          linear-gradient(90deg, var(--grid-color, rgba(41, 223, 255, 0.1)) 1px, transparent 1px);
         background-size: 50px 50px;
         transform: perspective(500px) rotateX(60deg);
         animation: gridMove 10s linear infinite;
@@ -117,7 +118,7 @@
       .vignette {
         position: fixed;
         inset: 0;
-        background: radial-gradient(circle at center, transparent 0%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0.9) 100%);
+        background: radial-gradient(circle at center, transparent 0%, var(--vignette-mid, rgba(0,0,0,0.4)) 70%, var(--vignette-edge, rgba(0,0,0,0.9)) 100%);
         pointer-events: none;
         z-index: 1;
       }
@@ -130,7 +131,7 @@
           to bottom,
           transparent 0px,
           transparent 2px,
-          rgba(0, 0, 0, 0.3) 3px
+          var(--scanline-color, rgba(0, 0, 0, 0.3)) 3px
         );
         pointer-events: none;
         z-index: 50;
