--- a/index.html
+++ b/index.html
@@ -172,13 +172,14 @@
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
     <script>
-      // PWA Service Worker Registration
+      // Enhanced PWA Service Worker Registration
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js').then(registration => {
-            console.log('SW registered: ', registration);
+          navigator.serviceWorker.register('/service-worker.js', { scope: '/' })
+          .then(registration => {
+            console.log('SW registered with scope:', registration.scope);
           }).catch(registrationError => {
-            console.log('SW registration failed: ', registrationError);
+            console.log('SW registration failed:', registrationError);
           });
         });
       }
