--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
               'scan': 'scanLine 3s linear infinite',
               'grid-move': 'gridMove 20s linear infinite',
               'breathing': 'breathing 2.5s ease-in-out infinite',
+              'glitch-shake': 'glitchShake 0.15s ease-in-out infinite',
+              'danger-pulse': 'dangerPulse 2s ease-in-out infinite',
             },
             keyframes: {
               'spin-reverse': {
@@ -77,6 +79,17 @@
               breathing: {
                 '0%, 100%': { transform: 'scale(1)' },
                 '50%': { transform: 'scale(0.97)' },
+              },
+              glitchShake: {
+                '0%, 100%': { transform: 'translate(0,0)' },
+                '20%': { transform: 'translate(-4px, 4px)' },
+                '40%': { transform: 'translate(-4px, -4px)' },
+                '60%': { transform: 'translate(4px, 4px)' },
+                '80%': { transform: 'translate(4px, -4px)' },
+              },
+              dangerPulse: {
+                '0%, 100%': { boxShadow: 'inset 0 0 50px rgba(255, 0, 0, 0.1)' },
+                '50%': { boxShadow: 'inset 0 0 100px rgba(255, 0, 0, 0.4)' },
               }
             }
           }
@@ -94,6 +107,7 @@
         color: #fff;
         overflow: hidden;
         overscroll-behavior: none;
+        transition: background-color 0.5s ease;
       }
       
       /* 3D Perspective Grid Background */
@@ -112,6 +126,20 @@
         z-index: 0;
         mask-image: linear-gradient(to bottom, transparent 0%, black 40%, black 80%, transparent 100%);
         -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 40%, black 80%, transparent 100%);
+        transition: all 0.5s ease;
+      }
+
+      /* Global Danger Mode Modifier */
+      .danger-mode .perspective-grid {
+        --grid-color: rgba(255, 42, 42, 0.3);
+        animation-duration: 2s;
+      }
+      .danger-mode .vignette {
+        --vignette-mid: rgba(255, 0, 0, 0.2);
+        --vignette-edge: rgba(100, 0, 0, 0.9);
+      }
+      .danger-mode {
+        animation: dangerPulse 2s infinite;
       }
 
       /* Holographic Vignette */
@@ -121,6 +149,7 @@
         background: radial-gradient(circle at center, transparent 0%, var(--vignette-mid, rgba(0,0,0,0.4)) 70%, var(--vignette-edge, rgba(0,0,0,0.9)) 100%);
         pointer-events: none;
         z-index: 1;
+        transition: all 0.5s ease;
       }
       
       /* Scanlines */
@@ -150,6 +179,10 @@
         -webkit-text-security: disc;
         text-security: disc;
       }
+
+      [data-vercel-toolbar] {
+        display: none !important;
+      }
     </style>
     <script type="importmap">
 {
@@ -160,10 +193,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^0.15.0",
-    "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/vite@^5.1.1",
+    "@capacitor/cli": "https://esm.sh/@capacitor/cli@^8.0.0"
   }
 }
 </script>
@@ -171,18 +203,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
-    <script>
-      // Enhanced PWA Service Worker Registration
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js', { scope: '/' })
-          .then(registration => {
-            console.log('SW registered with scope:', registration.scope);
-          }).catch(registrationError => {
-            console.log('SW registration failed:', registrationError);
-          });
-        });
-      }
-    </script>
   </body>
 </html>
