--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
   }
 }
 </script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/service-worker.js");
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
