feat: Update app icon and enhance Gemini function declarations
The application icon has been updated to a new design that includes a white circle, black square, and the cyan NEXA logo, improving its visual presence.

Additionally, the Gemini service has been enhanced by adding comprehensive function declarations for Android-style actions. These include `makeCall`, `sendWhatsApp`, `openApp`, and `setAlarm`, enabling more sophisticated user interactions and integrations with native device functionalities.

The authentication component (`Auth.tsx`) has been updated to include styling for secret inputs, specifically for the admin password, making it completely invisible while maintaining functionality.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,%3csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='512' height='512' fill='black'/%3e%3cpath d='M139.636 416V96H224.909L372.364 301.091V96H416V416H330.727L183.273 210.909V416H139.636Z' fill='%2329DFFF'/%3e%3c/svg%3e" />
+    <link rel="icon" href="data:image/svg+xml,%3csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='256' cy='256' r='256' fill='white'/%3e%3crect x='100' y='100' width='312' height='312' fill='black'/%3e%3cpath d='M171.272 412V100H256.545L404 305.091V100H447.636V412H362.363L214.909 214.909V412H171.272Z' fill='%2329DFFF'/%3e%3c/svg%3e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="NEXA AI Assistant" />
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="NEXA">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='256' cy='256' r='256' fill='white'/%3e%3crect x='100' y='100' width='312' height='312' fill='black'/%3e%3cpath d='M171.272 412V100H256.545L404 305.091V100H447.636V412H362.363L214.909 214.909V412H171.272Z' fill='%2329DFFF'/%3e%3c/svg%3e">
     <meta name="mobile-web-app-capable" content="yes">
 
     <link rel="manifest" href="/manifest.json">
