--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 '80%': { transform: 'translate(4px, -4px)' },
               },
               dangerPulse: {
-                '0%, 100%': { opacity: 0.2 },
-                '50%': { opacity: 0.6 },
+                '0%, 100%': { boxShadow: 'inset 0 0 50px rgba(255, 0, 0, 0.1)' },
+                '50%': { boxShadow: 'inset 0 0 100px rgba(255, 0, 0, 0.4)' },
               }
             }
           }
@@ -135,18 +135,18 @@
         content: '';
         position: fixed;
         inset: 0;
-        background: radial-gradient(circle, transparent 30%, rgba(255, 0, 0, 0.8) 100%);
-        z-index: 51;
+        background: radial-gradient(circle, transparent 40%, rgba(255, 0, 0, 0.25) 100%);
+        z-index: 51; /* Above scanlines */
         pointer-events: none;
-        animation: dangerPulse 0.5s infinite;
+        animation: dangerPulse 1s infinite;
       }
       .danger-mode .perspective-grid {
-        --grid-color: rgba(255, 42, 42, 0.4);
-        animation-duration: 1s;
+        --grid-color: rgba(255, 42, 42, 0.3);
+        animation-duration: 2s;
       }
       .danger-mode .vignette {
-        --vignette-mid: rgba(255, 0, 0, 0.4);
-        --vignette-edge: rgba(150, 0, 0, 0.95);
+        --vignette-mid: rgba(255, 0, 0, 0.2);
+        --vignette-edge: rgba(100, 0, 0, 0.9);
       }
 
       /* Holographic Vignette */
